Edit Button Added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
           <input type="text" id="name">
         </div>
         <div>
+          <label for="phoneNumber">Phone Number</label>
+          <input type="tel" id="phoneNumber">
+        </div>
+        <div>
           <label for="email">Email:</label>
-          <input type="text" id="email">
+          <input type="email" id="email">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
